# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = ["lib/dart_port"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Arto Bendiken"]
edition = "2021"
rust-version = "1.70"
description = "dart_port.rs"
documentation = "https://github.com/artob/dart_port.rs/blob/master/README.md"
readme = true
homepage = "https://github.com/artob/dart_port.rs"
repository = "https://github.com/artob/dart_port.rs"
license = "Unlicense"
license-file = "UNLICENSE"
keywords = []
categories = []
publish = true

[workspace.dependencies]
dart_port = { path = "lib/dart_port" }
