[package]
name = "dart_port"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["bindings", "ipc", "async", "ffi"]
categories = ["api-bindings", "asynchronous", "concurrency"]
publish.workspace = true

[features]
default = ["dynamic"]
dynamic = []
static = []

[dependencies]
dart-sys = "4.1"
thiserror = "1.0"

[lib]
name = "dart_port"
crate-type = ["cdylib", "staticlib"]

[target.'cfg(unix)'.dependencies]
